--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,10 @@
 <resources>
 
     <string name="app_name">pomyslNa</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="hello_msg">Dodaj swój pomysł na..</string>
+    <string name="user">login</string>
+    <string name="pass">hasło</string>
+    <string name="loguj">Zaloguj</string>
     <string name="action_settings">Settings</string>
 
 </resources>
