--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,5 @@
     <string name="pass">hasło</string>
     <string name="loguj">Zaloguj</string>
     <string name="action_settings">Settings</string>
-
+    <string name="logerror">Wprowadzono za krótki login lub hasło</string>
 </resources>
